--- a/views/foro.ejs
+++ b/views/foro.ejs
@@ -13,6 +13,9 @@
                         name="contenido" class="formatextarea"></textarea>
                     <button type="submit" class="btnForo">Agregar</button>
                 </form>
+                <%}else{%>
+                    <p>Si quieres Agregar un Tema <a href="/register">Registrate!</a> o </p>
+                    <p>Si ya tienes una cuenta <a href="/login">Inicia Sesión</a></p>
                 <%}%>
         </div>
     </div>
