--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
                     </a>
                 </div>
                 <div class="cuadradosT">
-                    <p">"Somos PhpForDevs, màs que una pagina de enseñanzas sobre PHP, somos tu mejor aliado en tu
+                    <p">"Somos PhpForDevs, más que una pagina de enseñanzas sobre PHP, somos tu mejor aliado en tu
                         camino de aprendizaje"</p>
                 </div>
                 <div class="cuadrados">
