--- a/public/css/ejemplos.css
+++ b/public/css/ejemplos.css
@@ -32,20 +32,27 @@
     padding-left: 50px;
     font-family:sans-serif;
     font-size: 15px;
-    background-color:rgba(212, 218, 218, 0.89);
-    margin-right: 400px;
+    background-color:rgba(255, 255, 255, 0.89);
+    margin-right: 20px;
+    margin-bottom: 10px;
 }
 .contenedor .EjemploCodigo table tbody tr .boton{
     width: 100%;
     text-align:right;  
     font-weight: bold;
+    
 }
 .btn{
     background-color: #2fce34;
     color: white;
     padding: 5px 16px;
     font-size: 15px;
+    margin: 20px;
 }
-
+img{
+    width: 50%;
+    margin: 20px;
+    height: 100%;
+}
 
 
