--- a/views/ejemplos.ejs
+++ b/views/ejemplos.ejs
@@ -12,22 +12,14 @@
                     <td>
                         <div class="ejem">Codigo EJemplo:</div>
                         <div class="contCodigo">
-                            < ?php
-                            <div class="codigo">
-                                <% for(let j=0;j<data[i].codigo.length;j++){%>
-                                    <%if(data[i].codigo[j]==";"){%>
-                                        <%=data[i].codigo[j]%><br/>
-                                        <%j++%>
-                                    <%}else%>    
-                                        <%=data[i].codigo[j]%>
-                                <%}%>    
-                            </div>
-                            ?>
+                            <a href="<%=data[i].url_post;%>" target="_blank">                                
+                                 <img src="<%=data[i].url_imagen;%>">                             
+                            </a>
                         </div>
                     </td>
                 </tr>
                 <tr>
-                    <td class="boton"><a class="btn" href="<%=data[i].url_ejemplo;%>" target="_blank">Ejecutar</a></td>
+                    <td class="boton"><a class="btn" href="<%=data[i].url_compilador;%>" target="_blank">Ejecutar</a></td>
                 </tr>
             </tbody>
         </table>
