--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,16 @@
-<h1>Login</h1>
+<link rel="stylesheet" type="text/css" href="/css/login.css">
+
+<div class="pos">
 <div class="loginform">
     <!--Inicio de Sesion-->
+    <h1>Iniciar Sesión</h1>
     <form action="/auth" method="POST">
         <input type="text" name="user" id="user" placeholder="Usuario">
         <input type="password" name="pass" id="pass" placeholder="Constraseña">
-        <input type="submit" value="login">
+        <button type="submit" class="btnIniciar" >Iniciar Sesión</button>
     </form>
     <!--En caso de registro-->
-    <a href="/register">Registrate!</a>
+    <button class="btnRegistrar"><a href="/register">Registrate!</a></button>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <% if(typeof alert !="undefined" ){%>
         <script>
@@ -24,4 +27,5 @@
 
         </script>
         <%}%>
+</div>
 </div>
