--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,13 +1,17 @@
-<h1>Registro</h1>
+<link rel="stylesheet" type="text/css" href="/css/login.css">
+
+<div class="pos">
 <div class="registerform">
     <!--Registro de usuario-->
     <form action="/register" method="POST">
+        <h1>Registro</h1>
         <input type="text" name="user" id="user" placeholder="Usuario">
         <input type="password" name="pass" id="pass" placeholder="Constraseña">
-        <input type="submit" value="registro">
+        <button type="submit" class="btnRegistro" >Registro</button>
     </form>
     <!--En caso de no querer registrarse-->
-    <a href="/login">Cancelar registro</a>
+    <button class="btnCancelar"><a href="/login">Cancelar registro</a></button>
+    
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <% if(typeof alert !="undefined" ){%>
         <script>
@@ -24,4 +28,5 @@
 
         </script>
         <%}%>
+</div>
 </div>
