--- a/views/videos.ejs
+++ b/views/videos.ejs
@@ -16,8 +16,9 @@
                             <strong class="title">
                                 <%=data[i].cod%>.<%= data[i].titulo %>
                             </strong>
-                            <p class="descripcion">en este video se trabaja sobre el crud en php para la creacion de un
-                                listado de tareas</p>
+                            <p class="descripcion">
+                                <%= data[i].descripcion_video%>
+                            </p>
                             <div class="videoapoyo">
                                 <div class="likes">
                                     <p class="tipo">Likes</p>
